--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -1,3 +1,4 @@
+{{ define "layout" }}
 <!doctype html>
 <html lang="pt-br">
 
@@ -7,22 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/static/styles/styles.css" rel="stylesheet" />
     <link href="/static/styles/output.css" rel="stylesheet" />
-    <title>NFF - Nota Fiscal Fácil</title>
+    <title>NFF - {{ template "title" . }}</title>
+    <script src="https://unpkg.com/htmx.org@1.9.5/dist/htmx.min.js"></script>
 </head>
 
 <body>
-    <header class="bg-sky-700 px-4 py-2 text-white sm:px-8 sm:py-3 flex justify-between">
-        <h1 class="text-xl">NFF - Nota Fiscal Fácil</h1>
+    <header hx-boost="true" class="bg-sky-700 px-4 py-2 text-white sm:px-8 sm:py-3 flex justify-between">
+        <h1 class="text-xl">
+            <a href="/">NFF - Nota Fiscal Fácil</a>
+        </h1>
         <ul class="flex justify-evenly ">
             {{ if .IsAuthenticated }}
-                <li
-                    class="hover:bg-sky-800 py-1 px-4 cursor-pointer rounded active:scale-90"
-                    hx-get="/entities"
-                    hx-target="#main"
-                    hx-push-url="true"
-                >
-                    Entidades
-                </li>
+                <a href="/entities">
+                    <li class="hover:bg-sky-800 py-1 px-4 cursor-pointer rounded active:scale-90">Entidades</li>
+                </a>
                 <li class="hover:bg-sky-800 py-1 px-4 cursor-pointer rounded active:scale-90">Nota Fiscal</li>
                 <li class="hover:bg-sky-800 py-1 px-4 cursor-pointer rounded active:scale-90">Modelos</li>
                 <li class="hover:bg-sky-800 py-1 px-4 cursor-pointer rounded active:scale-90">Histórico</li>
@@ -34,9 +33,10 @@
         </ul>
     </header>
 
-    <main id="main"></main>
+    <main id="main">
+        {{ template "main" . }}
+    </main>
 </body>
 
-<script src="https://unpkg.com/htmx.org@1.9.5/dist/htmx.min.js"></script>
-
 </html>
+{{ end }}
