--- a/web/internal/templates/layout.html
+++ b/web/internal/templates/layout.html
@@ -35,7 +35,7 @@
         </ul>
     </header>
 
-    <main class="px-4 py-4 sm:px-8 sm:py-6">
+    <main id="main" class="px-4 py-4 sm:px-8 sm:py-6">
         {{ template "main" . }}
     </main>
 </body>
