--- a/web/internal/templates/entities.html
+++ b/web/internal/templates/entities.html
@@ -3,7 +3,7 @@
 {{ define "main" }}
 <div class="flex justify-between gap-6">
     <section class="w-3/5">
-        <table class="flex flex-col gap-6" id="entity-list">
+        <table class="flex flex-col gap-6">
             <thead class="sticky top-14 rounded bg-gray-100">
                 <tr class="flex items-center gap-12 px-6 py-3">
                     <th class="flex-1 text-center">Nome</th>
@@ -12,11 +12,11 @@
                     <th class="flex-1 text-center">Bairro</th>
                 </tr>
             </thead>
-            <tbody class="flex flex-1 flex-col gap-6">
+            <tbody class="flex flex-1 flex-col gap-6" id="entity-list">
                 {{ range .Entities }}
                     {{ block "entity-card" . }}
                         {{ if . }}
-                        <tr class="flex cursor-pointer gap-12 rounded px-6 py-3 shadow shadow-gray-300 transition-shadow hover:shadow-gray-400"
+                        <tr class="flex cursor-pointer gap-12 rounded px-6 py-3 shadow shadow-gray-300 transition-all hover:shadow-gray-400"
                             hx-get="/entities/{{ .Id }}/form" hx-trigger="click" hx-target="#entity-form" id="entity-{{ .Id }}">
                             <td class="flex-1 truncate text-center"> {{ .Name }} </td>
                             <td class="flex-1 truncate text-center"> {{ if .CpfCnpj }} {{ .CpfCnpj }} {{ else }} - {{ end }}</td>
@@ -33,4 +33,27 @@
         {{ template "entity-form" . }}
     </aside>
 </div>
+<script>
+    document.querySelector('tbody').onclick = function (event) {
+        const entityCard = event.target.closest('tr')
+        if (entityCard) {
+            const previousSelectedCard = document.querySelector('tr.bg-gray-700.text-white')
+            if (previousSelectedCard) {
+                previousSelectedCard.className = entityCard.className
+            }
+            entityCard.className += " bg-gray-700 text-white"
+        }
+    }
+
+    document.highlightEntityListenerAdded = !!document.highlightEntityListenerAdded
+    if (!document.highlightEntityListenerAdded) {
+        document.addEventListener('entityUpdated', function(event) {
+            const entityId = event.detail.value
+            const entityCard = document.querySelector(`#entity-${entityId}`)
+            entityCard.className += " bg-gray-700 text-white"
+        })
+        document.highlightEntityListenerAdded = true
+    }
+
+</script>
 {{ end }}
