--- a/web/internal/templates/entity-form.html
+++ b/web/internal/templates/entity-form.html
@@ -81,7 +81,7 @@
                 </svg>
                 Registrar
             </button>
-            {{ if .Entity }}
+            {{ if .Entity.IsSelected }}
             <button hx-put="/entities/{{ .Entity.Id }}" hx-target="#entity-{{ .Entity.Id }}" hx-swap="outerHTML"
                 class="mt-4 flex flex-1 justify-center rounded bg-sky-300 px-4 py-3 hover:bg-sky-400" type="submit">
                 <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
@@ -91,7 +91,8 @@
                 </svg>
                 Atualizar
             </button>
-            <button hx-delete="/entities/{{ .Entity.Id }}" hx-target="#entity-form" hx-swap="outerHTML" class="mt-4 flex flex-1 justify-center rounded bg-red-400 px-4 py-3 hover:bg-red-500">
+            <button hx-delete="/entities/{{ .Entity.Id }}" hx-target="#entity-form" hx-swap="outerHTML"
+                class="mt-4 flex flex-1 justify-center rounded bg-red-400 px-4 py-3 hover:bg-red-500">
                 <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                     viewBox="0 0 448 512">
                     <path
@@ -103,21 +104,4 @@
         </div>
     </form>
 </div>
-{{ if .Entity }}
-<script>
-    document.eraseEntityCard = function(event) {
-        const entityId = event.detail.value
-        const entityCard = document.querySelector(`#entity-${entityId}`)
-        if (entityCard) {
-            entityCard.remove()
-        }
-    }
-
-    document.eraseEntityListenerAdded = !!document.eraseEntityListenerAdded
-    if (!document.eraseEntityListenerAdded) {
-        document.addEventListener('entityDeleted', document.eraseEntityCard);
-        document.eraseEntityListenerAdded = true
-    }
-</script>
-{{ end }}
 {{ end }}
