--- a/web/internal/templates/layout.html
+++ b/web/internal/templates/layout.html
@@ -37,6 +37,11 @@
     <main id="main" class="px-4 py-4 sm:px-8 sm:py-6">
         {{ template "main" . }}
     </main>
+
+    <dialog id="general-error-msg" class="b-black w-1/3 rounded border px-8 py-8 text-center text-2xl shadow shadow-gray-300">
+        <p class="text-neutral-800"></p>
+        <button class="mt-6 rounded border border-gray-700 bg-red-600 px-8 py-2 text-gray-100" onclick="this.closest('dialog').close()"> OK :(</button>
+    </dialog>
 </body>
 
 </html>
