feat: entity form validation OK

--- a/web/internal/templates/entities.html
+++ b/web/internal/templates/entities.html
@@ -12,13 +12,14 @@
                     <th class="flex-1 text-center">Bairro</th>
                 </tr>
             </thead>
+            {{ block "entity-list" . }}
             <tbody class="flex flex-1 flex-col gap-6" id="entity-list">
                 {{ if .Entities }}
                     {{ range .Entities }}
                         {{ block "entity-card" . }}
                             {{ if . }}
                             <tr class="flex cursor-pointer gap-12 rounded px-6 py-3 shadow shadow-gray-300 transition-all hover:shadow-gray-500 {{ if .IsSelected }} bg-gray-700 text-white {{ end }}"
-                                hx-get="/entities/{{ .Id }}/form" hx-trigger="click" hx-target="#entity-form"
+                                hx-get="/entities/{{ .Id }}/form" hx-trigger="click" hx-target="#entity-form" hx-swap="outerHTML"
                                 id="entity-{{ .Id }}">
                                 <td class="flex-1 truncate text-center"> {{ .Name }} </td>
                                 <td class="flex-1 truncate text-center"> {{ if .CpfCnpj }} {{ .CpfCnpj }} {{ else }} - {{ end }}</td>
@@ -30,6 +31,7 @@
                     {{ end }}
                 {{ end }}
             </tbody>
+            {{ end }}
         </table>
     </section>
     <aside class="w-2/5">
