--- a/web/internal/templates/entity-form.html
+++ b/web/internal/templates/entity-form.html
@@ -1,9 +1,11 @@
 {{ define "entity-form" }}
 <div class="sticky top-20" id="entity-form">
     <form>
-        <div class="flex py-2">
+        <input type="hidden" name="id" value="{{ .Entity.Id }}">
+        <div class="flex flex-col py-2">
+            <sup class="text-red-500">{{ .Entity.Errors.Name }}</sup>
             <input class="flex-1 text-2xl font-semibold" type="text" name="name" value="{{ .Entity.Name }}"
-                placeholder="Nome" required>
+                placeholder="Nome">
         </div>
         <hr>
         <div class="mt-4 flex">
@@ -13,29 +15,34 @@
                     <select class="h-10 rounded bg-gray-100 p-2" id="user_type" name="user_type">
                         <option value="Produtor Rural">Produtor Rural</option>
                     </select>
+                    <sub class="text-red-500">{{ .Entity.Errors.UserType }}</sub>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="cpf_cnpj"><strong>CPF/CNPJ</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="cpf_cnpj" name="cpf_cnpj"
-                        value="{{ .Entity.CpfCnpj }}" maxlength="14">
+                        value="{{ .Entity.CpfCnpj }}">
+                    <sub class="text-red-500">{{ .Entity.Errors.CpfCnpj }}</sub>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="ie"><strong>Inscrição Estadual</strong></label>
-                    <input class="rounded bg-gray-100 p-2" type="text" id="ie" name="ie" value="{{ .Entity.Ie }}" maxlength="13">
+                    <input class="rounded bg-gray-100 p-2" type="text" id="ie" name="ie" value="{{ .Entity.Ie }}">
+                    <sub class="text-red-500">{{ .Entity.Errors.Ie }}</sub>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="email"><strong>E-mail</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="email" id="email" name="email"
                         value="{{ .Entity.Email }}">
+                    <sub class="text-red-500">{{ .Entity.Errors.Email }}</sub>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="password"><strong>Senha</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="password" id="password" name="password"
                         value="{{ .Entity.Password }}">
+                    <sub></sub>
                 </div>
             </div>
 
@@ -44,30 +51,39 @@
                     <label for="postal_code"><strong>CEP</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="postal_code" name="postal_code"
                         value="{{ .Entity.Address.PostalCode }}">
+                    <sub class="text-red-500">{{ .Entity.Errors.PostalCode }}</sub>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="neighborhood"><strong>Bairro</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="neighborhood" name="neighborhood"
                         value="{{ .Entity.Address.Neighborhood}}">
+                    <sub></sub>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="street_type"><strong>Logradouro (tipo)</strong></label>
-                    <input class="rounded bg-gray-100 p-2" type="text" id="street_type" name="street_type"
-                        value="{{ .Entity.Address.StreetType }}">
+                    <!-- <input class="rounded bg-gray-100 p-2" type="text" id="street_type" name="street_type" -->
+                    <!--     value="{{ .Entity.Address.StreetType }}"> -->
+                    <select class="h-10 rounded bg-gray-100 p-2" id="street_type" name="street_type">
+                        <option value="Rua">Rua</option>
+                        <option value="Estrada">Estrada</option>
+                    </select>
+                    <sub class="text-red-500">{{ .Entity.Errors.StreetType }}</sub>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="street_name"><strong>Logradouro (nome)</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="street_name" name="street_name"
                         value="{{ .Entity.Address.StreetName }}">
+                    <sub></sub>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="number"><strong>Número da casa</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="number" name="number"
                         value="{{ .Entity.Address.Number }}">
+                    <sub></sub>
                 </div>
             </div>
         </div>
@@ -81,8 +97,8 @@
                 </svg>
                 Registrar
             </button>
-            {{ if .Entity.IsSelected }}
-            <button hx-put="/entities/{{ .Entity.Id }}" hx-target="#entity-{{ .Entity.Id }}" hx-swap="outerHTML" hx-vals="{'500': 'replace'}"
+            {{ if ne .Entity.Id 0 }}
+            <button hx-put="/entities/{{ .Entity.Id }}" hx-target="#entity-{{ .Entity.Id }}" hx-swap="outerHTML"
                 class="mt-4 flex flex-1 justify-center rounded bg-sky-300 px-4 py-3 hover:bg-sky-400" type="submit">
                 <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                     viewBox="0 0 512 512">
